Bug 195996 - align to grid bug
Summary: align to grid bug
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-folderview (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-11 11:14 UTC by Fabian B.
Modified: 2010-01-19 22:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian B. 2009-06-11 11:14:13 UTC
Version:           Plasma Workspace: 0.3 (using KDE 4.2.90)
Installed from:    Ubuntu Packages

http://imagebin.ca/img/nSm4JXk.jpg <-
There you can see the Amarok Icon is on an very different Raster then all other icons and this is very bad to use  and looks pretty stupid :p
restart plasma dont work, i have to disable grid icons , move them und re-enable the grid. 
and in some chasses, after systemstart i have a Scrollbar on the Desktop :( caus of the kontrolpanel on the upper screen and i must move all icons 

-sorry for my bad english hope you understand something :( -
Comment 1 Aaron J. Seigo 2009-06-12 01:07:05 UTC
"and in some chasses, after systemstart i have a Scrollbar on the Desktop :("

different bug, already reported.
Comment 2 Fredrik Höglund 2009-06-15 00:45:15 UTC
Could you add some details on how to reproduce this bug?

In other words what did you do to make the Amarok icon end up where it is on that screenshot?
Comment 3 Fabian B. 2009-06-15 19:23:28 UTC
enable align to grid an drag som program from the kmenu(kickoff) to the desktop or resize the Screenresolution (here 1440x900 -> 1024x768 and back to 1440x900)
and sometime afte a normal reboot
Comment 4 Theo Chatzimichos 2010-01-13 15:17:09 UTC
please try with 4.4 RC and report back
Comment 5 Fredrik Höglund 2010-01-19 22:38:33 UTC
SVN commit 1077284 by fredrik:

- Prevent icons from being placed at fractional grid positions when
  they're manually positioned near the edge of the icon view and align
  to grid is enabled.
- Take the direction of the flow into account when aligning icons to the grid.
- Fix an off-by-one error in nextGridPosition().

Fixed for: KDE 4.4 RC2
BUG: 195996


 M  +47 -7     iconview.cpp  
 M  +1 -0      iconview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1077284