- Prevent icons from being placed at fractional grid positions when   they're manually positioned near the edge of the icon view and align   to grid is enabled. - Take the direction of the flow into account when aligning icons to the grid. - Fix an off-by-one error in nextGridPosition().

Fixed for: KDE 4.4 RC2
BUG: 195996

svn path=/trunk/KDE/kdebase/apps/; revision=1077284