plasma/applets/folderview/iconview.h
@@ -202,6 +202,7 @@ private:
     void layoutItems();
     void alignIconsToGrid();
     QRect itemsBoundingRect() const;
+    QRect adjustedContentsRect(int *rowCount, int *colCount) const;
     bool doLayoutSanityCheck();
     void saveIconPositions() const;
     void loadIconPositions();
